--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "static-site-webpack",
+  "author": "Ryota Ito (https://github.com/itomise)",
   "scripts": {
     "dev": "node ./server.js",
     "start": "webpack --config webpack.dev.js",
